--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,6 +1,9 @@
+.banner{
+  height:750rpx;
+}
 .banner .slide-image{
   width: 100%;
-  height: 300rpx;
+  height: 750rpx;
 }
 .main{
   margin-top: 32rpx;
@@ -12,11 +15,11 @@
   border: 1px solid #eee;
   border-radius: 8rpx;
   box-shadow: 8rpx 8rpx 4rpx #888888;
-  height: 220rpx;
+  height: 160rpx;
   position: relative;
 }
 .card{
-  width: 30%;
+  width: 23%;
   height: 100%;
   text-align: center;
 }
@@ -27,7 +30,7 @@
 }
 .price{
   color: #FF1744;
-  padding-top:17rpx;
+  padding-top:61rpx;
   font-size:34rpx;
 }
 .timePrice{
@@ -39,7 +42,7 @@
   padding-top:28rpx;
 }
 .time{
-  padding-top: 76rpx;
+  padding-top: 32rpx;
 }
 .payNow{
   position: absolute;
@@ -48,5 +51,6 @@
   border-radius: 8rpx;
   right: 10rpx;
   color:#fff;
-  top:78rpx;
+  font-size:30rpx;
+  top:55rpx;
 }
