--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -38,3 +38,81 @@
 .money{
   padding-right:56rpx;
 }
+.chenge{
+  color: #06c1ae;
+}
+.merMes{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  border: 1px solid #eee;
+  border-radius: 8rpx;
+  background: #fff;
+  width: 90%;
+  height: 70%;
+  z-index:100;
+}
+.merMes .title{
+  height: 90rpx;
+  border-bottom: 1px solid #eee;
+  text-align: center;
+  line-height: 90rpx;
+  font-size: 34rpx;
+  margin-bottom: 10rpx;
+}
+.inputMes{
+  width: 94%;
+  margin: 0 auto;
+  height: 90rpx;
+  line-height: 90rpx;
+  color: rgb(12, 11, 11);
+  font-size: 30rpx;
+  border-bottom: 1px solid #E0E0E0;
+  padding-top: 40rpx;
+}
+.inputMes text{
+  width: 134rpx;
+  color: #333;
+}
+.inputMes input{
+  padding:20rpx 0 0 6rpx;
+  width:450rpx;
+  color: #999;
+}
+.merMes button{
+  width: 90%;
+  position: absolute;
+  bottom: 40rpx;
+  left: 0;
+  right: 0;
+  margin:0 auto;
+  border:1px solid #06c1ae;
+  background: #fff;
+  color: #06c1ae;
+}
+.merMes .close{
+  position:absolute;
+  top:19rpx;
+  right:-535rpx;
+  height:58rpx;
+  width:58rpx;
+  line-height: 58rpx;
+  text-align: center;
+  padding: 0;
+  border:1px solid #bdbdbd;
+  color: #bdbdbd;
+}
+
+.mask{
+  width:100%;
+  height:100%;
+  position:fixed;
+  background-color:#999;
+  z-index:99;
+  top:0;
+  left:0;
+  opacity:0.5;
+}
