--- a/pages/help/help.wxml
+++ b/pages/help/help.wxml
@@ -1,2 +1,3 @@
 <!--pages/help/help.wxml-->
 <text>pages/help/help.wxml</text>
+<web-view src="https://filmunion.com.cn/video/html/videohelp.html"></web-view>
