--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -11,8 +11,8 @@
     </swiper-item>
 </swiper>
 
-<view class='main'>
-  <view class='mainItem' 
+<view class='main'  wx:if='{{showPay}}' >
+  <view class='mainItem'
     wx:for='{{list}}' 
     wx:key='{{item.id}}' 
     bindtap='goBuy'
@@ -26,8 +26,24 @@
       <view class='describe'>¥{{item.vipPrice}}</view>
       <view class='time'>有效期：{{item.indate}}天</view>
     </view>
-    <view class='payNow'>立即购买</view>
+    <view class='payNow' >立即购买</view>
     <button open-type='getUserInfo'  bindgetuserinfo='upUserMes' class='getUserInfo'></button>
+  </view>
+</view>
+<view class='main'  wx:if='{{!showPay}}' >
+  <view class='mainItem'
+    wx:for='{{list}}' 
+    wx:key='{{item.id}}' 
+    data-vipType='{{item.vipType}}'
+  >
+    <view class='fl card'>
+      <!-- <view class='cardName'>月卡</view>  -->
+      <view class='price'>{{item.vipName}}</view>
+    </view>
+    <view class='timePrice fl'>
+      <view class='describe'>¥{{item.vipPrice}}</view>
+      <view class='time'>有效期：{{item.indate}}天</view>
+    </view>
   </view>
 </view>
 <nav />
