--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -4,8 +4,11 @@
 </view>
 
 <view class='list'>
-  <view wx:if='{{show}}' class='listItem'>我的收益
-    <view class='fr money'>¥ {{money}}</view>
+  <view wx:if='{{show}}' class='listItem'>待收益
+    <view class='fr money'>¥ {{unEarning}}</view>
+  </view>
+   <view wx:if='{{show}}' class='listItem'>历史累计收益
+    <view class='fr money'>¥ {{earning}}</view>
   </view>
   <view wx:if='{{show}}' class='listItem' bindtap='changeMes'>商户信息
     <view class='fr chenge money'>修改</view>
