--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -16,6 +16,9 @@
   <view wx:if='{{show}}' class='listItem' bindtap='changeMes'>商户信息
     <view class='fr chenge money'>修改</view>
   </view>
+    <view wx:if='{{!show}}' class='listItem' bindtap='applyFor'>申请代理
+    <view class='fr chenge money'>申请</view>
+  </view>
   <view class='listItem'>
     <button class='contact' bindtap='help'>下载地址</button>
      <image src='/image/help.png' class='more'></image>
@@ -37,3 +40,11 @@
  <view class='mask' hidden='{{updataMer}}'>
   </view>
 
+<view class='merMes' hidden='{{applyReason}}'>
+  <view class='inputMes'><text class='fl'>申请理由:</text>
+  </view>
+<textarea class='text' bindinput='bindReason'  data-reason='reason' />
+
+   <button bindtap='saveReaso'>保存</button>
+  <button class='close' wx:if='{{!applyReason}}' bindtap='closeApply'>X</button>
+</view>
