--- a/pages/wholesale/wholesale.wxml
+++ b/pages/wholesale/wholesale.wxml
@@ -7,6 +7,8 @@
     data-key='{{index}}'
   >
 
+    <view class="excel"  data-id="{{item.vipType}}" bindtap="excel" >导出</view>
+   
 
     <view class='row fl'>
       <view class='up'> 
@@ -56,3 +58,12 @@
   <view class="payNow" bindtap='goWholesale' style="position:fixed; bottom:0;width: 120rpx;">
 立即采购
   </view>
+
+  <view hidden='{{excelhidden}}' class='mainItem' >
+  <view><text class='fl' >导出数量:</text>
+  </view>
+ <input type="number" bindinput='excelnumber'>
+   <button bindtap='closeExcel' class='close'>取消</button>
+   <button bindtap='excelDownload'  class='download'>导出</button>
+   </input>
+</view>
