--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -105,7 +105,6 @@
   border:1px solid #bdbdbd;
   color: #bdbdbd;
 }
-
 .mask{
   width:100%;
   height:100%;
@@ -120,4 +119,25 @@
   width:100%;
   height:60%;
   border: 1px solid #bbb;
+}
+.erweima{
+  position: absolute;
+  width: 44rpx;
+  height: 44rpx;
+  right:40rpx;
+  top:6%;
+}
+.erweimaView{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  border: 1px solid #eee;
+  border-radius: 8rpx;
+  background: #fff;
+  width: 65%;
+  height: 40%;
+  z-index:100;
 }
